; ModuleID = '/home/carl/AnghaBench/linux/fs/btrfs/extr_scrub.c_scrub_bio_end_io.c'
source_filename = "/home/carl/AnghaBench/linux/fs/btrfs/extr_scrub.c_scrub_bio_end_io.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bio = type { i32, %struct.scrub_bio* }
%struct.scrub_bio = type { i32, %struct.bio*, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.btrfs_fs_info* }
%struct.btrfs_fs_info = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bio*)* @scrub_bio_end_io to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scrub_bio_end_io(%struct.bio* %0) #0 {
  %2 = alloca %struct.bio*, align 8
  %3 = alloca %struct.scrub_bio*, align 8
  %4 = alloca %struct.btrfs_fs_info*, align 8
  store %struct.bio* %0, %struct.bio** %2, align 8
  %5 = load %struct.bio*, %struct.bio** %2, align 8
  %6 = getelementptr inbounds %struct.bio, %struct.bio* %5, i32 0, i32 1
  %7 = load %struct.scrub_bio*, %struct.scrub_bio** %6, align 8
  store %struct.scrub_bio* %7, %struct.scrub_bio** %3, align 8
  %8 = load %struct.scrub_bio*, %struct.scrub_bio** %3, align 8
  %9 = getelementptr inbounds %struct.scrub_bio, %struct.scrub_bio* %8, i32 0, i32 3
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load %struct.btrfs_fs_info*, %struct.btrfs_fs_info** %11, align 8
  store %struct.btrfs_fs_info* %12, %struct.btrfs_fs_info** %4, align 8
  %13 = load %struct.bio*, %struct.bio** %2, align 8
  %14 = getelementptr inbounds %struct.bio, %struct.bio* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load %struct.scrub_bio*, %struct.scrub_bio** %3, align 8
  %17 = getelementptr inbounds %struct.scrub_bio, %struct.scrub_bio* %16, i32 0, i32 2
  store i32 %15, i32* %17, align 8
  %18 = load %struct.bio*, %struct.bio** %2, align 8
  %19 = load %struct.scrub_bio*, %struct.scrub_bio** %3, align 8
  %20 = getelementptr inbounds %struct.scrub_bio, %struct.scrub_bio* %19, i32 0, i32 1
  store %struct.bio* %18, %struct.bio** %20, align 8
  %21 = load %struct.btrfs_fs_info*, %struct.btrfs_fs_info** %4, align 8
  %22 = getelementptr inbounds %struct.btrfs_fs_info, %struct.btrfs_fs_info* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.scrub_bio*, %struct.scrub_bio** %3, align 8
  %25 = getelementptr inbounds %struct.scrub_bio, %struct.scrub_bio* %24, i32 0, i32 0
  %26 = call i32 @btrfs_queue_work(i32 %23, i32* %25)
  ret void
}

declare dso_local i32 @btrfs_queue_work(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
